# slambook

ch2/: CMakeLists.txt
ch2/include/: helloSLAM.h
ch2/src/: helloMain.cpp  helloSLAM.cpp
ch3/: CMakeLists.txt
ch3/eigen/: CMakeLists.txt
ch3/eigen/src/: eigenMatrix.cpp
ch3/examples/: CMakeLists.txt
ch3/examples/src/: coordinates.cpp  plotTrajectory.cpp
ch3/geometry/: CMakeLists.txt
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt
ch4/data/: estimated.txt
ch4/src/: sophus.cpp  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/src/: joinMap.cpp
